# aoc-24

./: Cargo.toml
.cargo/: config.toml
analysis/: day17.txt
src/: lib.rs
util/: gen_perms.py
