[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
glidesort = "0.1.2"
good_lp = "1.10.0"
identity-hash = "0.1.0"
itertools = "0.13.0"
mimalloc = {version = "0.1.43", default-features = false}
radsort = "0.1.1"
rdx = "0.0.7"
regex = "1.11.1"
small-map = "0.1.3"
tiny_sort = "1.0.5"

[profile.release]
lto = "fat"

[profile.bench]
panic = "abort"
lto = "fat"
codegen-units = 1
